--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>varnerlab.github.io</title>
+    </head>
+
+    <h1>Varnerlab</h1>
+    <p>Hello world!</p>
+
+<body>
