its time for a change

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>varnerlab.github.io</title>
-    </head>
-
+<html lang="en-US">
+<head>
+    <title>varnerlab.github.io</title>
+    <meta charset="UTF-8">
+</head>
+<body>
     <h1>Varnerlab</h1>
     <p>Hello world!</p>
-
-<body>
+</body>
