--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>varnerlab.github.io</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Varnerlab</h1>
