--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
     <header>
-        <h2>Varnerlab Respositories</h2>
+        <h2>VARNERLAB Publication Respositories</h2>
     </header>
+
+    <div class="text_blurb">
+        This page lists the GitHub repositories associated with VARNERLAB publications (organized by year). We are commited to 
+        <a class="text_link" href="https://blogs.plos.org/plos/tag/open-science/">OpenScience</a>, for on-going projects (not published yet, or in process) check
+        out our <a class="text_link" href="experimental.html">experimental</a> page.
+    </div>
 
     <div>
         <div class="year">2015</div>
