--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     </header>
 
     <div class="text_blurb">
-        This page lists the GitHub repositories associated with VARNERLAB publications (organized by year). We are commited to 
+        This page links to the GitHub repositories associated with VARNERLAB publications. 
+        We are commited to 
         <a class="text_link" href="https://blogs.plos.org/plos/tag/open-science/">OpenScience</a>, for on-going projects (not published yet, or in process) check
         out our <a class="text_link" href="experimental.html">experimental</a> page.
     </div>
 
-    <div>
+    <div style="padding-top: 10px;">
         <div class="year">2015</div>
         <article class="download">
             <div class="paper_short_title">Reduced order extrinsic coagulation model</div>
