--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
              <div><a class="paper" href="https://www.sciencedirect.com/science/article/pii/S2214030117300160">Wayman et al (2019) Improving designer glycan production in <i>Escherichia coli</i> through model-guided metabolic engineering. Metabolic Engineering Communications, 9, e00088; doi: https://doi.org/10.1016/j.mec.2019.e00088</a></div>
              <div><a class="code" href="https://github.com/varnerlab/Glyco-model-code-MATLAB">(matlab)</a></div>
          </article>
+         <article class="download">
+            <div class="paper_short_title">SEML: A Simplified English Modeling Language</i></div>
+             <div><a class="paper" href="https://www.sciencedirect.com/science/article/pii/S2405896319321299">Zhang Z and J. Varner (2019) SEML: A Simplified English Modeling Language for Constructing Biological Models in Julia IFAC-PapersOnLine, 52, 121-128; doi: https://doi.org/10.1016/j.ifacol.2019.12.246
+             </a></div>
+             <div><a class="code" href="https://github.com/varnerlab/SEML">(julia)</a></div>
+         </article>
     </div>
     
     <div style="padding-top: 10px;">
