--- a/index.html
+++ b/index.html
@@ -93,9 +93,16 @@
          </article>
          <article class="download">
             <div class="paper_short_title">SEML: A Simplified English Modeling Language</i></div>
-             <div><a class="paper" href="https://www.sciencedirect.com/science/article/pii/S2405896319321299">Zhang Z and J. Varner (2019) SEML: A Simplified English Modeling Language for Constructing Biological Models in Julia IFAC-PapersOnLine, 52, 121-128; doi: https://doi.org/10.1016/j.ifacol.2019.12.246
+             <div><a class="paper" href="https://www.sciencedirect.com/science/article/pii/S2405896319321299">Zhang Z and J. Varner (2019) SEML: A Simplified English Modeling Language for Constructing Biological Models in Julia. IFAC-PapersOnLine, 52, 121-128; doi: https://doi.org/10.1016/j.ifacol.2019.12.246
              </a></div>
              <div><a class="code" href="https://github.com/varnerlab/SEML">(julia)</a></div>
+         </article>
+         <article class="download">
+            <div class="paper_short_title">Effective Kinetc Modeling of Fibrinolysis with Platelets</i></div>
+             <div><a class="paper" href="https://www.sciencedirect.com/science/article/pii/S2405896319321251">LeCover R et al (2019) Kinetic Modeling of Coagulation and Fibrinolysis.  IFAC-PapersOnLine, 52, 94-100;
+            doi: https://doi.org/10.1016/j.ifacol.2019.12.242
+             </a></div>
+             <div><a class="code" href="https://github.com/varnerlab/Fibrinolysis_model_w_platelets">(julia)</a></div>
          </article>
     </div>
     
